<resources>
    <string name="app_name" translatable="false">To do today</string>
    <string name="registerAccount">Register Account</string>
    <string name="signInId">Sign in</string>
    <string name="userId">Enter Username</string>
    <string name="passwordId">Password</string>
    <string name="registerId">Register</string>
    <string name="validatePasswordId">Validate Password</string>
    <string name="registerUserText">Register User</string>
    <string name="loginScreenId">Already have an account?</string>
    <string name="tooltipAddNewTask">Add new task</string>
    <string name="tooltipFilterTasks">Filter tasks by label</string>
    <string name="Settings">Settings</string>
    <string name="openTasksButton">Open Tasks</string>
    <string name="closedTasksButton">Closed Tasks</string>
    <string name="toDoTitleToDo">To Do</string>
    <string name="toDoTitleDone">Done</string>
    <string name="toDoTitleTask">Task</string>
    <string name="taskEdit">Edit</string>
    <string name="taskClose">Close</string>
    <string name="taskSave">Save</string>
    <string name="taskCancel">Cancel</string>
    <string name="taskDescriptionHint">Add description</string>
    <string name="taskTitleHint">Set title</string>
    <string name="taskDateHint">Add date and time</string>
    <string name="errorAlreadyHere">You\'re already here</string>
    <string name="errorTitleRequired">Error: a title is required</string>
    <string name="tooltipSignOut">Sign out</string>
    <string name="passwordsNotMatch">Passwords do not match!</string>
    <string name="fieldsFilledInCorrectly">User Registered</string>
    <string name="tooltipLabelButton">Manage labels</string>
    <string name="emptyUsernameField">Please fill in a correct username</string>
    <string name="emptyPasswordField">Please fill in a correct password</string>
    <string name="emptyValidatePasswordField">Please repeat your password</string>
    <string name="addTaskTaskAdded">Added Task</string>
    <string name="addTaskTaskEdited">Task edited</string>
    <string name="addTaskTaskDelete">Task deleted</string>
    <string name="tooltipTaskDelete">Delete task</string>
    <string name="openTasksMarkedDone">Marked done</string>
    <string name="openTasksMarkedOpen">Marked To Do</string>
    <string name="accountDoesntExist">Account does not exist</string>
    <string name="accountAlreadyExists">Account already exists</string>
    <string name="fillInCorrectLengthUsername">Characters used for username too short</string>
    <string name="fillInCorrectLengthPassword">Characters used for password too short</string>
    <string name="labelsDeleteLabel">Delete label</string>
    <string name="toDoTitleLabel">Labels</string>
    <string name="labelNameHint">Set label name</string>
    <string name="tooltipLabelDelete">Delete label</string>
    <string name="errorLabelNameRequired">Error: label name is required</string>
    <string name="addLabelLabelDelete">Label deleted</string>
    <string name="addLabelLabelAdded">Added label</string>
    <string name="addLabelLabelEdited">Label edited</string>
    <string name="tooltipAddNewLabel">Add new label</string>
    <string name="toDoTitleSelectLabel">Select label</string>
</resources>