<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:scrollbarSize="14dp"
    tools:context=".tasks.OpenTasksActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasks_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutBottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskTitleId"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/taskTitleId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toDoTitleToDo"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <LinearLayout
        android:id="@+id/linearLayoutBottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/openTasksButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="alreadyOpen"
            android:text="@string/openTasksButton" />

        <Button
            android:id="@+id/closedTasksButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="alreadyOpen"
            android:text="@string/closedTasksButton" />

        <Button
            android:id="@+id/labelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1.5"
            android:contentDescription="@string/tooltipLabelButton"
            android:tooltipText="@string/tooltipLabelButton"
            app:icon="@drawable/ic_baseline_label_24"
            app:iconSize="30dp" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addTaskButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:contentDescription="@string/tooltipAddNewTask"
        android:hapticFeedbackEnabled="true"
        android:onClick="addTask"
        android:tooltipText="@string/tooltipAddNewTask"
        app:backgroundTint="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="@+id/tasks_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_circle_outline_24"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/filterTasksButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/tooltipFilterTasks"
        android:hapticFeedbackEnabled="true"
        android:tooltipText="@string/tooltipFilterTasks"
        app:backgroundTint="@color/purple_200"
        app:layout_constraintBottom_toTopOf="@+id/addTaskButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_filter_alt_24"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/signOutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:contentDescription="@string/tooltipSignOut"
        android:hapticFeedbackEnabled="true"
        android:onClick="signOut"
        android:tooltipText="@string/tooltipSignOut"
        app:backgroundTint="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_exit_to_app_24"
        tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>