<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.RegisterActivity">

    <EditText
        android:id="@+id/userId"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:background="@color/cardview_dark_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/userId"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.473" />

    <EditText
        android:id="@+id/passwordId"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:background="@color/cardview_dark_background"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/passwordId"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/validatePasswordId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userId"
        app:layout_constraintVertical_bias="0.8" />

    <EditText
        android:id="@+id/validatePasswordId"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:background="@color/cardview_dark_background"
        android:ems="10"
        android:hint="@string/validatePasswordId"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userId"
        app:layout_constraintVertical_bias="0.365" />

    <Button
        android:id="@+id/registerId"
        android:layout_width="143dp"
        android:layout_height="54dp"
        android:backgroundTint="#0D2CD5"
        android:onClick="register"
        android:text="@string/registerId"
        android:textSize="15sp"
        app:cornerRadius="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/validatePasswordId"
        app:layout_constraintVertical_bias="0.345" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="176dp"
        android:layout_height="176dp"
        app:layout_constraintBottom_toTopOf="@+id/userId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logochecklist" />

    <TextView
        android:id="@+id/registerUserText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerUserText"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/userId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/loginScreenId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/loginScreenId"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerId"
        app:layout_constraintVertical_bias="0.242" />

</androidx.constraintlayout.widget.ConstraintLayout>