<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:scrollbarSize="14dp"
    tools:context=".tasks.OpenTasks">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasks_list"
        android:layout_width="0dp"
        android:layout_height="604dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.614" />

    <TextView
        android:id="@+id/taskTitleId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="To do"
        android:textSize="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageView
        android:id="@+id/task_manager_settings_id"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/Settings"
        android:tooltipText="@string/Settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        app:srcCompat="@drawable/settings" />

    <ImageView
        android:id="@+id/task_manager_filter_id"
        android:layout_width="66dp"
        android:layout_height="57dp"
        android:clickable="true"
        android:contentDescription="@string/tooltipFilterTasks"
        android:tooltipText="@string/tooltipFilterTasks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.997"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.816"
        app:srcCompat="@drawable/filter" />

    <ImageView
        android:id="@+id/task_manager_plus_id"
        android:layout_width="66dp"
        android:layout_height="57dp"
        android:clickable="true"
        android:contentDescription="@string/tooltipAddNewTask"
        android:tooltipText="@string/tooltipAddNewTask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.997"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.902"
        app:srcCompat="@drawable/plus" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/openTasksButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/openTasksButton"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/closedTasksButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/closedTasksButton"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>